--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -8,12 +8,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Reminder text" />
+        android:text="Reminder text"
+        android:textColor="#000000"/>
 
     <TextView
         android:id="@+id/itemTrigger"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Trigger time" />
+        android:text="Trigger time"
+        android:textColor="#000000"/>
 </LinearLayout>
