--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -20,7 +20,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="4"
-            android:hint="Search ....."
+            android:hint="@string/search_hint_text"
             android:paddingLeft="10dp" />
 
         <androidx.appcompat.widget.AppCompatImageButton
@@ -66,11 +66,11 @@
         android:layout_height="70dp"
         android:layout_centerInParent="true"
         android:layout_marginBottom="36dp"
-        android:text="Create"
+        android:text="@string/reminder_createButton_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toEndOf="@+id/et_message"
+        app:layout_constraintStart_toEndOf="@+id/reminder_message"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.995" />
