--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/itemMessage"
@@ -9,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Reminder text"
-        android:textColor="#000000"/>
+        android:textColor="#000000" />
 
     <TextView
         android:id="@+id/itemTrigger"
@@ -17,5 +18,5 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Trigger time"
-        android:textColor="#000000"/>
+        android:textColor="#000000" />
 </LinearLayout>
