--- a/app/src/main/res/layout/list_view_item.xml
+++ b/app/src/main/res/layout/list_view_item.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="84dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/itemMessage"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_height="fill_parent"
+        android:layout_weight="2"
+        android:gravity="center"
         android:text="Reminder text"
-        android:textColor="#000000" />
+        android:textColor="#808080"
+        android:textSize="24sp"/>
 
     <TextView
         android:id="@+id/itemTrigger"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_weight="1"
         android:text="Trigger time"
-        android:textColor="#000000" />
+        android:gravity="center"
+        android:textColor="#808080"/>
 </LinearLayout>
